Fix: Fix event carousel overlapping

--- a/src/Components/Events/Carousel/EventCarousel.css
+++ b/src/Components/Events/Carousel/EventCarousel.css
@@ -22,3 +22,19 @@
     margin: 30px;
     width: 300px;
 }
+
+/* .swiper-slide {
+    width: 80%;
+
+*/
+    
+.swiper-slide {
+    width: 100%;
+    margin-left: 75px;
+    margin-right: 75px;
+} 
+.swiper-slide-next {
+    width: 100%;
+    margin-left: 75px;
+    margin-right: 75px;
+}
